--- a/index.html
+++ b/index.html
@@ -384,10 +384,10 @@
         <a href="language_translation.html" class="text-decoration-none">
           <div class="card project-card position-relative">
             <img src="img\translator\translator_logo.jpg" class="card-img-top" alt="Project 1 Image">
-            <div class="project-name">Language Trananslation using Deep Learning</div>
+            <div class="project-name">Language Translation using Deep Learning</div>
             <div class="card-body">
-              <h5 class="card-title d-none">Language Trananslation using Deep Learning</h5>
-              <p class="card-text text-light">Language Trananslation using Deep Learning</p>
+              <h5 class="card-title d-none">Language Translation using Deep Learning</h5>
+              <p class="card-text text-light">Language Translation using Deep Learning</p>
             </div>
           </div>
         </a>
